--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -31,6 +31,7 @@ $button-focus-border-color: black
 $button-color: black
 $title-size: 2.5rem
 $input-color: black
+$body-font-size: 14px
 
 
 // Import only what you need from Bulma
