--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -32,7 +32,8 @@ $button-color: black
 $title-size: 2.5rem
 $input-color: black
 $body-font-size: 14px
-
+$modal-background-background-color: rgba(1, 1, 1, 0.5)
+$modal-content-width: 430px
 
 // Import only what you need from Bulma
 @import '~bulma/sass/utilities/_all.sass'
