--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -148,6 +148,10 @@ input
 input,
 input:focus
   border-width: 1px
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button 
+  -webkit-appearance: none
+  margin: 0
 input:focus-visible
   outline: none
 .dropdown-item
