VSL-130: Added error modal for displaying errors on the UI

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -24,11 +24,13 @@ $input-focus-border-color: transparent
 $input-border-color: black
 $input-shadow: none
 $button-background-color: transparent
-$button-border-color: black
+$button-border-color: #7464F0
 $button-active-border-color: black
 $button-hover-border-color: black
 $button-focus-border-color: black
-$button-color: black
+$button-color: #7464F0
+$button-font: DM Sans
+$button-font-weight: 700
 $title-size: 2.5rem
 $input-color: black
 $body-font-size: 14px
