added balance display

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -5,12 +5,16 @@ $navWidth: 260px
 // Set your brand colors
 $bodyBg: #162c4e
 $bodyColor: #bbc6ce
+$primaryPurple: #7464F0
+$backgroundPurple: #9B8FF9
 
 // Update Bulma's global variables
 $grey-dark: $bodyColor
 $grey-darker: $bodyColor
 $grey-light: $bodyColor
 $link: white
+$primary: $primaryPurple
+$light: $backgroundPurple
 
 // sets a max width of 960px on .container
 $widescreen-enabled: false
