--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -3,20 +3,44 @@
 @import "@fontsource/dm-mono"
 $navWidth: 260px
 
-// Set your brand colors
-$bodyBg: #162c4e
-$bodyColor: #bbc6ce
-$primaryPurple: #7464F0
-$backgroundPurple: #9B8FF9
-$darkPurple: #000E64
+/********************** Colors *******************/
+$white: #FFFFFF
+$green-success: #18AA01
+$warning-orange: #F26300
+$error-red: #E30C0C
+
+//grey:
+$grey-primary: #939393
+$grey-dark: #6D6D6D
+$grey-secondary: #DDDDDD
+$grey-tertiary: #EEEEEE
+
+//purple
+$purple-primary: #7464F0
+$purple-dark: #000E64
+$purple-secondary: #7464F0
+$purple-tertiary: #DFDBFF
+$purple-background: #F0F0FE
+
+//green
+$green-primary: #DCFABF
+$green-dark: #A4C881
+
+//yellow
+$yellow-primary: #D6D71C
+$yellow-dark: #695A0D
+$yellow-secondary: #FFE780
+$yellow-tertiary: #FEFFDD
+
+
+/********************* Font Sizes ********************/
 
 // Update Bulma's global variables
-$grey-dark: $bodyColor
-$grey-darker: $bodyColor
-$grey-light: $bodyColor
-$link: white
-$primary: $primaryPurple
-$light: $backgroundPurple
+$bodyBg: $white
+$bodyColor: $white
+$link: $white
+$primary: $purple-primary
+$light: $purple-tertiary
 $family-sans-serif: "DM Sans"
 $family-monospace: "DM Mono"
 
@@ -34,8 +58,8 @@ $input-shadow: none
 $button-background-color: transparent
 $button-border-color: #7464F0
 $button-active-border-color: black
-$button-hover-border-color: $darkPurple
-$button-hover-color: $darkPurple
+$button-hover-border-color: $purple-dark
+$button-hover-color: $purple-dark
 $button-focus-border-color: black
 $button-color: #7464F0
 $button-font: DM Sans
