VSL-131: Updated modals, added remove vault and collection

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -151,7 +151,8 @@ label
 .button.is-link,
 .button:hover.is-link
   color: white
-  background-color: #0C14D0
+  background-color: $primary
+  border-radius: 8px
 .button.is-add
   color: $primaryPurple
   background-color: $lightPurple
