--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -4,6 +4,8 @@
 $navWidth: 260px
 
 /**********************Initial variables - Colors *******************/
+$black: #000000
+$white: #FFFFFF
 $success-green: #18AA01
 $warning-orange: #F26300
 $error-red: #E30C0C
