VSL-98: Updated UI according to new events structure, updated from safeOwners to contacts to fetch the name and updated modal header to look like on design

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -175,6 +175,7 @@ label
   border-radius: 100px
   padding: 4px 12px
   height: 26px
+  cursor: default
 .button.is-done
   color: white
   background-color: $primaryPurple
