--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -237,6 +237,7 @@ h2
   border-radius: 8px !important
 .button.disabled
   animation: none !important
+  pointer-events: none
 .button.is-small
   padding: 8px 12px
   font-size: 0.875rem
