--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -98,6 +98,9 @@ $button-hover-color: $purple-primary
 /*********************Component variables -  Modal********************/
 $modal-background-background-color: rgba(1, 1, 1, 0.5)
 $modal-content-width: 430px
+.modal-content
+  max-height: calc(100vh - 210px)
+  overflow-y: auto !important
 .modal-safe-name
   color: $purple-primary
   font-weight: 500
@@ -432,3 +435,22 @@ hr
   border-radius: 4px
 .table-border > :not(:last-child)
   border-bottom: 1px solid $grey-light
+.confirmation
+  white-space: nowrap
+  padding: 15px 14px
+  font-size: 0.875rem
+  box-shadow: none
+  border: 1px solid $black
+  border-radius: 8px
+.confirmations
+  overflow: auto
+.confirmation
+  margin-right: 8px
+  svg
+    margin-right: 12px
+svg.approved
+  fill: $success
+svg.rejected
+  fill: $danger
+svg.pending
+  fill: $warning
