added nft safe overview

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -226,6 +226,8 @@ h2
   background: $purple-primary
 .has-background-secondary-purple
   background: $purple-secondary
+.has-background-tertiary-purple
+  background: $purple-tertiary
 
 /********************* Custom utility css - Button ********************/
 .button
