VSL-120: Style optimizations

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -447,9 +447,10 @@ hr
     margin-right: 12px
 .confirmations
   overflow: auto
-svg.approved
-  fill: $success
-svg.rejected
-  fill: $danger
-svg.pending
-  fill: $warning
+svg
+  &.approved
+    fill: $success
+  &.rejected
+    fill: $danger
+  &.pending
+    fill: $warning
