added truncate text

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -190,6 +190,10 @@ h2
   font-size: .9rem !important
 .has-text-heighlight
   font-family: $family-monospace
+.has-text-truncate
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
 
 /********************* Custom utility css - Border ********************/
 
@@ -402,6 +406,8 @@ input:focus-visible
   flex: 1 0 0
 .flex-2
   flex: 2 0 0
+.flex-3
+  flex: 3 0 0
 
 /********************* Custom utility css - Animation ********************/
 @keyframes purple-background-animation 
