update Add Owner UI to FIGMA specs

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -213,6 +213,10 @@ h2
       border-bottom: 1px solid $grey-light
     &-right
       border-right: 1px solid $grey-light
+  &-success
+    border: 1px solid $success-green
+  &-error
+    border: 1px solid $error-red
 
 /********************* Custom utility css - Border radius********************/
 .rounded-sm
