--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -21,7 +21,7 @@ $white-20: rgba(255,255,255, 0.2)
 $grey-primary: #939393
 $grey-dark: #6D6D6D
 $grey-secondary: #DDDDDD
-$grey-light: #DDDDDD // Override bulma default to match designs
+$grey-light: #DDDDDD
 $grey-tertiary: #EEEEEE
 
 //purple
