--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -21,7 +21,6 @@ $white-20: rgba(255,255,255, 0.2)
 $grey-primary: #939393
 $grey-dark: #6D6D6D
 $grey-secondary: #DDDDDD
-$grey-light: #DDDDDD
 $grey-tertiary: #EEEEEE
 
 //purple
@@ -85,7 +84,7 @@ $body-font-size: 14px
 /*********************Component variables -  Input********************/
 $input-border-width: 1px
 $input-focus-border-color: transparent
-$input-border-color: black
+$input-border-color: $grey-secondary
 $input-shadow: none
 $input-color: black
 
@@ -207,13 +206,13 @@ h2
   &-none
     border: none
   &-light
-    border: 1px solid $grey-light
+    border: 1px solid $grey-secondary
     &-top
-      border-top: 1px solid $grey-light
+      border-top: 1px solid $grey-secondary
     &-bottom
-      border-bottom: 1px solid $grey-light
+      border-bottom: 1px solid $grey-secondary
     &-right
-      border-right: 1px solid $grey-light
+      border-right: 1px solid $grey-secondary
   &-success
     border: 1px solid $success-green
   &-error
@@ -392,16 +391,22 @@ label
   user-select: none
 
 /********************* Custom utility css - Input ********************/
-input
+
+input,.input
   font-size: 1rem
-input,
-input:focus
+  height: auto
+  border-width: 1px
+input,.input,
+input:focus,input.input:focus
   border-width: 1px
 input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button 
+input[type=number]::-webkit-inner-spin-button,
+.input[type=number]::-webkit-outer-spin-button,
+.input[type=number]::-webkit-inner-spin-button 
   -webkit-appearance: none
   margin: 0
-input:focus-visible
+input:focus-visible,
+.input:focus-visible
   outline: none
 
 /********************* Custom utility css - Dropdown ********************/
@@ -448,7 +453,7 @@ hr
   width: 3px
   border-radius: 4px
 .table-border > :not(:last-child)
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $grey-secondary
 .table-border-bottom > :last-child
   border-bottom: 1px solid $grey-light
 .confirmation
