VSL-120: Removed columns class, added margins to confirmations class

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -457,7 +457,8 @@ hr
     &.pending
       fill: $warning
 .confirmations
-  margin-right: -2.75rem
+  display: flex
+  margin: -0.75rem -2.75rem -1.75rem -0.75rem
   overflow: auto
   -ms-overflow-style: none
   scrollbar-width: none
