--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -98,6 +98,10 @@ $button-hover-color: $purple-primary
 /*********************Component variables -  Modal********************/
 $modal-background-background-color: rgba(1, 1, 1, 0.5)
 $modal-content-width: 430px
+.modal-content
+  max-height: calc(100vh - 210px)
+  overflow-y: auto !important
+  overflow-x: hidden !important
 .modal-safe-name
   color: $purple-primary
   font-weight: 500
@@ -432,3 +436,21 @@ hr
   border-radius: 4px
 .table-border > :not(:last-child)
   border-bottom: 1px solid $grey-light
+.confirmation
+  white-space: nowrap
+  padding: 15px 14px
+  font-size: 0.875rem
+  box-shadow: none
+  border: 1px solid $black
+  border-radius: 8px
+  margin-right: 8px
+  svg
+    margin-right: 12px
+.confirmations
+  display: flex
+  margin: -0.75rem -2.75rem -1.75rem -0.75rem
+  overflow: auto
+  -ms-overflow-style: none
+  scrollbar-width: none
+.confirmations::-webkit-scrollbar
+    display: none
