--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -194,6 +194,10 @@ h2
   font-size: .9rem !important
 .has-text-heighlight
   font-family: $family-monospace
+.has-text-truncate
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
 
 /********************* Custom utility css - Border ********************/
 
@@ -230,6 +234,8 @@ h2
   background: $purple-primary
 .has-background-secondary-purple
   background: $purple-secondary
+.has-background-tertiary-purple
+  background: $purple-tertiary
 
 /********************* Custom utility css - Button ********************/
 .button
@@ -404,6 +410,8 @@ input:focus-visible
   flex: 1 0 0
 .flex-2
   flex: 2 0 0
+.flex-3
+  flex: 3 0 0
 
 /********************* Custom utility css - Animation ********************/
 @keyframes purple-background-animation 
