--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -206,13 +206,15 @@ h2
   &-none
     border: none
   &-light
-    border: 1px solid $grey-light
+    border: 1px solid $grey-secondary
     &-top
-      border-top: 1px solid $grey-light
+      border-top: 1px solid $grey-secondary
     &-bottom
-      border-bottom: 1px solid $grey-light
+      border-bottom: 1px solid $grey-secondary
     &-right
-      border-right: 1px solid $grey-light
+      border-right: 1px solid $grey-secondary
+    &-left
+      border-left: 1px solid $grey-secondary
 
 /********************* Custom utility css - Border radius********************/
 .rounded-sm
@@ -245,6 +247,8 @@ h2
   border: none
   box-shadow: none
   border-radius: 8px !important
+.button:hover
+  color:$black
 .button.disabled
   animation: none !important
 .button.is-small
@@ -443,7 +447,7 @@ hr
   width: 3px
   border-radius: 4px
 .table-border > :not(:last-child)
-  border-bottom: 1px solid $grey-light
+  border-bottom: 1px solid $grey-secondary
 .confirmation
   white-space: nowrap
   padding: 15px 14px
