style/design updates, remove console.logs

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -396,6 +396,8 @@ input,.input
   font-size: 1rem
   height: auto
   border-width: 1px
+  &.is-error
+    border-color: $error-red
 input,.input,
 input:focus,input.input:focus
   border-width: 1px
