actually use table elements for table

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -429,6 +429,9 @@ input:focus-visible,
   flex: 2 0 0
 .flex-3
   flex: 3 0 0
+.flex-9
+  flex: 9 0 0
+
 
 /********************* Custom utility css - Animation ********************/
 @keyframes purple-background-animation 
@@ -459,6 +462,10 @@ hr
 .progress-bit
   width: 3px
   border-radius: 4px
+table
+  border-collapse: unset
+table th
+  font-weight: normal
 .table-border > :not(:last-child)
   border-bottom: 1px solid $grey-secondary
 .table-border-bottom > :last-child
