pr feedback + bugfixes

--- a/packages/client/src/App.sass
+++ b/packages/client/src/App.sass
@@ -192,7 +192,7 @@ h2
   font-size: 1.8rem !important
 .is-size-6
   font-size: .9rem !important
-.has-text-heighlight
+.has-text-highlight
   font-family: $family-monospace
 .has-text-truncate
   white-space: nowrap
